# cyclotron

./: nbdimetest.ipynb  pyproject.toml  test.txt
data/: LC_par_1-20MHz_2026_03_19.s1p  LC_primary_with_revised_varicon1_1-20M_2026_04_10.s1p  LC_primary_with_two_varicons_2026_04_10.s1p  LC_serial_1-20MHz_2026_03_23.s1p  LC_serial_1-20MHz_2026_03_23_2.s1p  LC_serial_two_varicons_trial1_2026_03_30.s1p  LC_serial_two_varicons_trial2_1-20M_2026_03_30.s1p  LC_serial_two_varicons_trial2_narrow_2026_03_30.s1p  LC_serial_with_trimmer_faraway_2026_03_23.s1p  LC_serial_with_trimmer_just_2026_03_23.s1p  LC_serial_with_trimmer_moderate_2026_03_23.s1p  LC_serial_with_trimmer_tooconnected_2026_03_23.s1p  LC_serial_without_hand_1-20M_2026_03_30.s1p  LC_serial_witrh_hand_1-20M_2026_03_30.s1p  LCprimary_ajusted_2026_4_16.s1p  LCprimary_ajusted_ver2_2026_4_16.s1p  LCprimary_varicon1-10mm_2026_04_13.s1p  LCprimary_varicon1-25mm_2026_04_13.s1p  LCprimary_varicon1-5mm_2026_04_13.s1p  LCprimary_ver1_2026_04_14.s1p  LCprimary_ver2_2026_04_14.s1p  LCprimary_ver3_2026_04_14.s1p  LCprimary_with_varicon2_2026_04_14.s1p  LCprimary_with_varicon2_empty_2026_04_14.s1p  cable2_one_port_1-20MHz_2026_02_16.s1p  cable_one_port_1-20MHz_2026_02_16.s1p  coil+dee(serial)_1-20MHz_2026_02_04.s1p  coil+dee(serial)_1_20_02_13_dee_to_port1(2).s2p  coil+dee(serial)_1_20_02_13_dee_to_port1.s2p  coil+dee(serial)_dee_to_port1.s2p  coil+dee(serial)_dee_to_port2.s2p  coil+dee(serial)_dee_to_port2_1-20MHz_dee-to-port2.s2p  coil+dee_1-20MHz_2026_02_02.s1p  coil+dee_1-70MHz_2026_01_30.s1p  coil_1-20MHz_2026_02_02.s1p  (+31 more)
(+36 files in other folders)
